# geordi

./: .dockerignore  .gitignore  Changelog  Dockerfile  INSTALL.xhtml  LICENSE  README.html  README.md  README.xhtml  Setup.hs  bot-config  compile-config  config  configure  geordi.cabal  install-clang  install-gcc-trunk  install-haskell  install-klee  irc-config  jail-config  link-config  llvm-no-temp-files.patch  notes.txt  prep-image  readme.md  xmpp-config
diagnose_sigsys/: diagnose_sigsys.c
etc/: compile-config
layer/etc/geordi/: compile-config
layer/geordi-src/: CompileConfig.hs  ErrorFilters.hs  EvalCxx.hsc  Gcc.hs  IrcBot.hs  Local.hs  Sys.hsc  XmppBot.hs
layer/geordi-src/Cxx/: Operations.hs
layer/geordi-src/Editing/: Basics.hs  Tests.hs
layer/geordi-src/prelude/: delimited_ostream.hpp  more_ostreaming.hpp  tracked.hpp
lockdown/: lockdown.cpp
prelude/: ScopeGuard.hpp  bark.cpp  bark.hpp  bin_iomanip.cpp  bin_iomanip.hpp  compile.sh  delimited_cout.hpp  delimited_ostream.hpp  demangle_typeinfo_name.patch  dont_use_misc.patch  evil_casts.hpp  foreach.hpp  geordi.hpp  libcxx_demangle_typeinfo_name.patch  literal_escape.hpp  lvalue_rvalue.hpp  more_ostreaming.cpp  more_ostreaming.hpp  more_stdlib_ostreaming.hpp  precedence.hpp  preload.cpp  prelude.cpp  prelude.h  prelude.hpp  range_printing.hpp  show.hpp  terse.hpp  tpreload.cpp  tracked.cpp  tracked.hpp  type_strings.cpp  type_strings.hpp  unique_ptr.hpp  using.hpp
res/: terse.hpp  tests.txt
scripts/: clean  compile  compile-base  compile-common  compile-irc  compile-prelude  compile-xmpp  flags  g++flags  getsyscallnames  getsyscalls  mkrt  parse-ldd-output.hs  perms  processtrace.hs  rtcp  run-tests  trace-execs  trycompile
src/: Bot.hs  CompileConfig.hs  CxxParse.hs  EditCmds.hs  EditCommandBasics.hs  EditCommandDiff.hs  EditCommandGrammar.hs  EditCommandParse.hs  EditCommandParseError.hs  EditCommandShow.hs  EditCommandTests.hs  ErrorFilters.hs  EvalCpp.hsc  EvalCxx.hsc  Flock.hsc  Gcc.hs  HttpBot.hs  IRC.hs  IrcBot.hs  Local.hs  MakeType.hs  MemberTest.hs  MemoTrie.hs  Mkrt.hs  ParsecUtil.hs  Parsers.hs  Ptrace.hsc  Request.hs  RequestEval.hs  Resource.hsc  Setup.hs  Sys.hsc  Testsuite.hs  Util.h  Util.hs  Util.hsc  XmppBot.hs  diagnose_sigsys.c  geordi.cabal  lockdown.cpp  (+3 more)
src/Cxx/: Basics.hs  Operations.hs  Parse.hs  Show.hs
src/Data/: NonEmptyList.hs
src/Editing/: Basics.hs  Commands.hs  Diff.hs  EditsPreparation.hs  Execute.hs  Parse.hs  Show.hs  Tests.hs  notes.txt
src/lockdown/: compile.sh  lockdown.cpp
src/prelude/: geordi.hpp  more_ostreaming.cpp  more_ostreaming.hpp  preload.cpp  prelude.cpp  prelude.hpp  tlists.hpp  type_strings.hpp
