name: geordi
version: 0
cabal-version: >= 1.2
license: PublicDomain
homepage: http://www.eelis.net/geordi/
maintainer: geordi@contacts.eelis.net
bug-reports: mailto:geordi@contacts.eelis.net
package-url: http://www.eelis.net/geordi/snapshots/
build-type: Custom

data-files: jail-config compile-config

flag irc
  description: Build IRC front end
  default: True

flag testsuite
  description: Build test suite
  default: True

executable geordi-local
  other-modules: Sys, EvalCxx, SysCalls, Flock, Ptrace
  ghc-options: -Wall -fno-warn-unused-binds -fno-warn-orphans
  build-tools: hsc2hs
  build-depends: base, parallel, mtl, syb, unix, utf8-string, network, containers, readline, parsec<3, Diff, directory, regex-compat
  main-is: Local.hs
  hs-source-dirs: src

executable geordi-testsuite
  main-is: Testsuite.hs
  if flag(testsuite)
    other-modules: Sys, EvalCxx, SysCalls, Flock, Ptrace
    ghc-options: -Wall -fno-warn-unused-binds -fno-warn-orphans
    build-tools: hsc2hs
    build-depends: base, parallel, mtl, syb, unix, utf8-string, network, containers, parsec<3, Diff, directory, regex-compat
    hs-source-dirs: src
  else
    buildable: False

executable geordi-irc
  main-is: IrcBot.hs
  if flag(irc)
    other-modules: Sys, EvalCxx, SysCalls, Flock, Ptrace
    ghc-options: -Wall -fno-warn-unused-binds -fno-warn-orphans
    build-tools: hsc2hs
    build-depends: base, parallel, mtl, syb, unix, utf8-string, network, containers, parsec<3, Diff, directory, regex-compat, irc
    hs-source-dirs: src
  else
    buildable: False

source-repository head
  type: darcs
  location: http://www.xs4all.nl/~weegen/eelis/geordi/
